--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon index.js"
+		"build": "netlify deploy --prod"
 	},
 	"author": "",
 	"license": "ISC",
@@ -14,6 +14,7 @@
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"mongoose": "^8.4.0",
-		"nodemon": "^3.1.0"
+		"nodemon": "^3.1.0",
+		"serverless-http": "^3.2.0"
 	}
 }
